Changelog
=========


1.6.3 (unreleased)
------------------

- Nothing changed yet.


1.6.2 (2013-05-17)
------------------

- Hide author in file view if anonymous and allowAnonymousViewAbout is False.
  [Julian Infanger]


1.6.1 (2013-04-17)
------------------

- Lawgiver support: map permissions.
  [jone]


1.6 (2013-01-21)
----------------

- Drop Plone 4.0 support.
  [jone]

- Hide view action for file.
  [Julian Infanger]


1.5 (2012-10-16)
----------------

- Add missing dependency in setup.py
  [tschanzt]

- use new document_date instead of effectiveDate.
  [tschanzt]


1.4.12 (2012-05-09)
-------------------

- Show time too on contenthostory viewlet.
  [mathias.leimgruber]


1.4.11 (2012-05-01)
-------------------

- Readded i18n:translate for content history viewlet action.
  [mathias.leimgruber]


1.4.10 (2012-04-30)
-------------------

- Fixed filename in response header for download.
  [Julian Infanger]


1.4.9 (2012-03-12)
------------------

- Table head should be in thead, body in tbody.
  [Julian Infanger]


1.4.8 (2012-03-05)
------------------

- Added plone default classes to tables.
  [Julian Infanger]


1.4.7 (2011-12-21)
------------------

- The image preview, should no be squarish.
  [mathias.leimgruber]


1.4.6 (2011-12-21)
------------------

- Fixed MANIFEST.in (include *.rst)
  [mathias.leimgruber]


1.4.5 (2011-12-21)
------------------

- add test for is_image method in FileView
  [eschmutz]

- fix: error when uploading a not scalable image mimetype (i.e. .dwg)
  we now check for allowed mimetypes to fix the error
  [eschmutz]

1.4.4 (2011-08-22)
------------------


1.4.3 (unreleased)
------------------

- created imagepreview in file_view
  [ttschanz]

- Added registry.xml for user_ids field.
  [mathias.leimgruber]

- Added setFilename() method.
  [Thomas Buchberger]


1.4.2
-----

- First move effectiveDate field to default schemata, then change write
  permissions on all other fields (except default schemata)