@@ -11,6 +11,8 @@
 
   <i18n:registerTranslations directory="locales" />
 
+  <include file="permissions.zcml" />
+
   <include package=".browser" />
   <include package=".content" />
   <include package=".rules" />
