@@ -8,8 +8,7 @@ from logging import getLogger
 from plone.app.blob.field import BlobMarshaller
 from Products.Archetypes import atapi
 from Products.ATContentTypes.content.file import ATFile, ATFileSchema
-from Products.CMFCore.permissions import \
-    ManagePortal, View, ModifyPortalContent
+from Products.CMFCore.permissions import  View, ModifyPortalContent
 from Products.CMFCore.utils import getToolByName
 from Products.validation import V_REQUIRED
 from ZODB.POSException import ConflictError
@@ -57,7 +56,7 @@ schematas = ['categorization', 'dates', 'ownership', 'settings']
 for f in FileSchema.keys():
     field_ = FileSchema[f]
     if field_.schemata in schematas:
-        field_.write_permission = ManagePortal
+        field_.write_permission = 'ftw.file: Edit advanced fields'
 
 
 class File(ATFile):
