@@ -10,4 +10,9 @@
         permissions="ftw.file: Add File"
         />
 
+    <lawgiver:map_permissions
+        action_group="manage content settings"
+        permissions="ftw.file: Edit advanced fields"
+        />
+
 </configure>
