@@ -1,0 +1,10 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    i18n_domain="ftw.file">
+
+  <permission
+      id="ftw.file.EditAdvancedFields"
+      title="ftw.file: Edit advanced fields"
+      />
+
+</configure>
