@@ -5,5 +5,10 @@
       <role name="Manager" />
       <role name="Contributor" />
     </permission>
+    <permission name="ftw.file: Edit advanced fields" acquire="False">
+      <role name="Manager" />
+      <role name="Site Administrator" />
+      <role name="Reviewer" />
+    </permission>
   </permissions>
 </rolemap>
