@@ -5,7 +5,8 @@ Changelog
 1.6.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add permission to edit advanced fields.
+  [tschanzt]
 
 
 1.6.2 (2013-05-17)
